# operaton-external-task-client-python3

./: Dockerfile  README.md  docker-compose-auth.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  publish.yml
examples/: bpmn_error_example.py  correlate_message.py  event_subprocess_example.py  fetch_and_execute.py  get_process_instance.py  retry_task_example.py  start_process.py  tasks_example.py
examples/examples_auth_basic/: fetch_and_execute.py  get_process_instance.py  start_process.py  task_handler_example.py
operaton/client/: async_external_task_client.py  engine_client.py  external_task_client.py
operaton/client/tests/: test_async_external_task_client.py  test_async_external_task_client_auth.py  test_async_external_task_client_bearer.py  test_engine_client.py  test_engine_client_auth.py  test_engine_client_bearer.py  test_external_task_client.py  test_external_task_client_auth.py  test_external_task_client_bearer.py
operaton/external_task/: async_external_task_executor.py  async_external_task_worker.py  external_task.py  external_task_executor.py  external_task_worker.py
operaton/external_task/tests/: test_async_external_task_executor.py  test_async_external_task_worker.py  test_external_task.py  test_external_task_executor.py  test_external_task_worker.py
operaton/process_definition/: process_definition_client.py
operaton/process_definition/tests/: test_process_definition_client.py
operaton/utils/tests/: test_auth_basic.py  test_auth_bearer.py  test_utils.py  (+1 more)
postman_collection/: Operaton REST APIs.postman_collection.json
(+2 files in other folders)
