[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operaton_external_task_client_python3"
version = "1.0.0"
authors = [
    { name = "Deserve Labs", email="devteam@deserve.com" },
]
maintainers = [
    { name = "DLR terrabyte team" }
]
dependencies = [
    "requests>=2.24.0"
]
description = "External Task Client for Operaton BPM engine. Its based on the camunda-external-task-client-python3 and has been adapted to Operaton."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/DLR-terrabyte/operaton-external-task-client-python3"
Issues = "https://github.com/DLR-terrabyte/operaton-external-task-client-python3/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
include = ["*"]